--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"> -->
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Frontend Mentor | Product preview card component</title>
 
@@ -29,7 +28,8 @@
   <body>
     <main>
     <div class="contenedor">
-      <img src="./images/image-product-desktop.jpg" alt="imagen_producto" class="img"/>
+      <div class="imagen"></div>
+      <!-- <img src="./images/image-product-desktop.jpg" alt="imagen_producto" class="img"/> -->
       
       <div class="informacion_producto">
         <h3 class="articulo">Perfume</h3>
